# link2pay-app

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  DEMO.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DOCUMENTATION.md  ENVIRONMENTS.md  HACKATHON_PROPOSAL.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  ONRAMP.md  PROJECT_STATUS.md  README.md  SECURITY.md  SECURITY_REFERENCE.md  SECURITY_REMEDIATION_SPEC.md  docker-compose.yml  link2pay  render.yaml  setup.sh
.claude/: settings.json  settings.local.json
.interface-design/: system.md
agent-tasks/: README.md  RUN_ALL.md  _CONTEXT.md  phase-00-setup-upgrade.md  phase-01-test-anchor.md  phase-02-offramp-flow.md  phase-03-mock-breb.md  phase-04-soroban-receipt.md  phase-05-path-payments.md  phase-06-wallets-kit.md  phase-07-reflector-preview.md  phase-08-checkout-button.md  phase-09-deploy.md  phase-10-readme-docs.md
agents/: README.md
agents/ai-analyst/: agent.mjs
agents/research-agent/: agent.mjs
agents/trading-bot/: agent.mjs
backend/: .env.example  package-lock.json  package.json  railway.toml  test-api.ts  test-auth.ts  tsconfig.json
backend/prisma/: schema.prisma
backend/scripts/: seed-liquidity.ts  test-anchor.ts
backend/src/: db.ts  index.ts
circuits/: .gitignore  package-lock.json  package.json
circuits/scripts/: download-ptau.sh  (+2 more)
contracts/receipt/: Cargo.toml  README.md
contracts/receipt/src/: lib.rs  test.rs
docs/: UX_LAWS_GUIDELINES.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
references/: README.md
(+237 files in other folders)
