[package]
name = "link2pay-receipt"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
# Pinned to the verified OpenZeppelin stellar-contracts v0.7.2 release.
soroban-sdk = "26.1.0"
stellar-access = "=0.7.2"
stellar-macros = "=0.7.2"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
